--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,10 +1,12 @@
 footer {
-      background-color: #00ff00;
-      height: 60px;
-      width: 100%;
-      bottom: 0;
-      position: fixed;
-      display: flex;
-      justify-content: center;
-      line-height: 60px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #00FF00;
+    height: 60px;
+}
+
+footer p {
+    text-align: center;
+    margin: 20px;
 }
