--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,13 +1,15 @@
 header {
-      background-color: white;
-      height: 70px;
-      width: 100%;
-      border-bottom: 1px solid #CCCCCC;
+    width: 100%;
+    background-color: white;
+    height: 70px;
+    border-bottom: 1px solid #CCCCCC;
+    display: flex;
+    align-items: center;
 }
+
 .logo {
-      background-image: url(../images/logo.png);
-      position: absolute;
-      width: 136px;
-      height: 60px;
-      left: 20px;
+    width: 142px;
+    height: 60px;
+    background: url("../images/logo.png") no-repeat center;
+    padding-left: 20px;
 }
