--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,79 +1,107 @@
 .places {
-        max-width: 1000px;
-        margin: 0px auto;
-        font-size: 30px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin-bottom: 60px;
-}
-.places h1 {
-        width: 100%;
-        padding-left: 22px;
+    width: 100%;
+    border: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.places article {
-        width: 390px;
-        padding: 20px;
-        margin: 20px;
-        border: 1px solid red;
-        border-radius: 4px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: flex-start;
+.places > h1 {
+    font-size: 30px;
+    padding-left: 20px;
+    padding-top: 20px;
+    margin-bottom: 0px;
+    flex: 0 1 100%;
+}
+.places > article {
+    width: 390px;
+    padding: 20px 20px 20px 20px;
+    margin: 20px 20px 20px 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: relative;
 }
 
-.places article h2 {
-
-        font-size: 30px;
-        width: auto;
-        margin-right: auto;
-        margin-left: auto;
-        text-align: center;
-        padding-left: 30px;
+.places > article > h2 {
+    font-size: 30px;
+    margin: 0 0 0 0;
+    align-self: center;
 }
 
-.places article div.price_by_night {
-        color: #FF5A5F;
-        border: 4px solid #FF5A5F;
-        border-radius: 50%;
-        max-width: 80px;
-        min-width: 60px;
-        height: 60px;
-        font-size: 30px;
-        text-align: center;
-        line-height: 60px;
+.price_by_night {
+    color: #FF5A5F;
+    border: 4px solid #FF5A5F;
+    min-width: 60px;
+    height: 60px;
+    font-size: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    position: absolute;
+    top: 10px;
+    right: 20px;
 }
-.places article div.information {
-        width: 100%;
-        height: 80px;
-        border: 1px solid #DDDDDD;
-        border-left: none;
-        border-right: none;
-        display: flex;
-        float: left;
-        font-size: 12px;
+.price_by_night > p {
+    margin: 0 0 0 0;
 }
 
-div.information div.max_guest, div.information div.number_rooms, div.information div.number_bathrooms {
-        width: 100px;
-        background-repeat: no-repeat;
-        background-position: center top;
-        margin: 4px auto;
-        text-align: center;
-        line-height: 9em;
-}
-div.information div.max_guest {
-        background-image: url(../images/icon_group.png);
-}
-div.information div.number_rooms {
-        background-image: url(../images/icon_bed.png);
-}
-div.information div.number_bathrooms {
-        background-image: url(../images/icon_bath.png);
+.information {
+    align-self: center;
+    height: 80px;
+    width: 100%;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.user, .description {
-        font-size: 14px;
-        margin: 2px 0px;
+.max_guest, .number_rooms, .number_bathrooms {
+    width: 100px;
+    text-align: center;
+}
+
+.max_guest > p, .number_rooms > p, .number_bathrooms > p{
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.guest_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_group.png") no-repeat center;
+}
+
+.bed_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_bed.png") no-repeat center;
+}
+
+.bath_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_bath.png") no-repeat center;
+}
+
+.user > p {
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+.description > p {
+    margin-top: 7px;
+    margin-bottom: 0px;
 }
